CMAKE_MINIMUM_REQUIRED(VERSION 2.8.8)
PROJECT(ProjectIO)

FILE(GLOB ProjectIOSrcs *.cpp)
FILE(GLOB ProjectIOHdrs *.hpp *.h)

INCLUDE(FindZLIB)
INCLUDE(FindPNG)
INCLUDE(FindOpenGL)
INCLUDE(FindGLEW)
INCLUDE(FindBoost)
INCLUDE(FindPkgConfig)

FIND_PACKAGE(GLEW REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(ZLIB REQUIRED)
FIND_PACKAGE(PNG REQUIRED)
FIND_PACKAGE(Boost REQUIRED COMPONENTS filesystem system)
PKG_SEARCH_MODULE(SDL2 sdl2)
PKG_SEARCH_MODULE(FREETYPE freetype2)

INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIR} ${GLEW_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS} ${PNG_INCLUDE_DIRS} ${ZLIB_INCLUDE_DIRS} ${FREETYPE_INCLUDE_DIRS})
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})

SET(CMAKE_CXX_FLAGS "-std=c++11")
ADD_DEFINITIONS( -D__cplusplus=201103L )

ADD_EXECUTABLE(ProjectIO ${ProjectIOSrcs} ${ProjectIOHdrs})
TARGET_LINK_LIBRARIES(ProjectIO ${SDL2_LIBRARIES} ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES} ${Boost_LIBRARIES} ${PNG_LIBRARIES} ${ZLIB_LIBRARIES} ${FREETYPE_LIBRARIES})

ADD_CUSTOM_COMMAND(TARGET ProjectIO PRE_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/data $<TARGET_FILE_DIR:ProjectIO>/data
)
